# spacy-lazy-docbin

./: .gitignore  pyproject.toml
src/spacy_lazy_docbin/: __init__.py  base.py  chunked.py  indexer.py  lazy.py  logging.py  sentence_view.py  utils.py
tests/: conftest.py  test_docbin.py
